--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css"> <!--Bootstrap como framework CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!--Bootstrap Icons CSS-->
     <link rel="stylesheet" href="css/style.css">
     <title>JQuery Basics</title>
 </head>
@@ -13,17 +13,17 @@
         <h1>Plugin: <small class="text-muted fs-4">Small Notification</small></h1>
         <hr>
     </div>
-
-    <script src="js/lib/jquery-3.7.1.min.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-        $.smallBox({
-            titulo: 'Al aire:',
-            subtitulo: 'La voz de México Vivo',
-            texto: 'Karen melissa 107.1FM',
-            img: 'img/foto.jpg',
-            icon: 'bi bi-broadcast'
-        });
-    </script>
+<script src="js/lib/jquery-3.7.1.min.js"></script>
+<script src="js/app.js"></script>
+<script>
+    $.smallBox({
+        titulo: 'Al aire:',
+        subtitulo: 'La voz de México Vivo',
+        texto: 'Karen melissa 107.1FM',
+        img: 'img/foto.jpg',
+        icon: 'bi bi-broadcast',
+        icon_s: 'bi bi-mic'
+    });
+</script>
 </body>
 </html>
